# Pomodoro

./: .dockerignore  .gitignore  .local.env  .prod.env  .test.env  Dockerfile  Makefile  alembic.ini  async_test.py  dependecy.py  docker-compose.test.yml  docker-compose.yml  exception.py  gunicorn.conf.py  main.py  pyproject.toml  pytest.ini  settings.py
.github/workflows/: github.ci.yml
alembic/: env.py
alembic/versions/: 2873dcb57510_refactor_async.py  2eb24e7bfbcc_extend_user_profile.py  701cfc661256_ref_user_profile.py  7f7af33f44ae_user_id_in_tasks.py  95ef13e7d903_add_category_type.py  acf75c72c063_user_init.py  af82164cf0b1_del_token_in_userprofile.py  b5376a9fe5ce_del_access_token.py  bdb6056b214f_access_token_nullable.py  d16d4c825138_update_userprofile.py  e6b423efe3c9_init.py
app/: consumer.py  dependecy.py  exception.py  main.py  sentry.py  settings.py
app/broker/: __init__.py  consumer.py  producer.py
app/client/: __init__.py  google_client.py  yandex_client.py
app/handlers/: auth.py  ping.py  tasks.py  user.py
app/infrastructure/broker/: __init__.py  accessor.py
app/infrastructure/cache/: accessor.py
app/infrastructure/database/: accessor.py  database.py
app/models/: __init__.py
app/repository/: __init__.py  cache_task.py  task_repository.py  user_repository.py
app/service/: __init__.py  auth.py  task.py  user.py
app/shema/: __init__.py  user.py
app/tasks/: handlers.py  models.py  service.py  shema.py
cache/: accessor.py
client/: __init__.py  google_client.py  yandex_client.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: auth.py  tasks.py  user.py
models/: __init__.py  tasks.py  user.py
repository/: __init__.py  cache_task.py  task_repository.py  user_repository.py
service/: auth.py  task.py  user.py
shema/: __init__.py  auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: anonymous_async_client.py  infrastructure.py  load_env.py
worker/: __init__.py  celery.py
(+20 files in other folders)
