[tool.poetry]
name = "pomodoroproject"
version = "0.1.0"
description = ""
authors = ["AliRN <ali_ramazanov_2000@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.4" }
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
httpx = "^0.28.1"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
gunicorn = "^23.0.0"
uvicorn-worker = "^0.3.0"
python-dotenv = "^1.0.1"
pytest = { extras = ["async"], version = "^8.3.5" }
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.3"
anyio = "^4.9.0"
twisted = "^24.11.0"
factory-boy = "^3.3.3"
pytest-factoryboy = "^2.7.0"
pytest-asyncio = "^0.26.0"
celery = "^5.5.2"
flower = "^2.0.1"
aio-pika = "^9.5.5"
aiokafka = "^0.12.0"
flake8 = "^7.1.1"
pylint = "^3.3.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
ruff = "^0.7.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



#[poetry.group.dev.dependencies]
#flake8 = "^7.1.1"
#pylint = "^3.3.1"
#black = "^24.10.0"
#isort = "^5.13.2"
#mypy = "^1.13.0"
#ruff = "^0.7.2"